Fix text alignment in input box

--- a/src/components/InputBox/InputBox.css
+++ b/src/components/InputBox/InputBox.css
@@ -10,11 +10,9 @@
     font-size: 96px;
     flex-grow: 0;
     flex-shrink: 0;
-    line-height: 48px;
     margin-bottom: -4px;
     margin-top: 24px;
     overflow: hidden;
-    padding-bottom: 24px;
     text-align: right;
     width: calc(100% - 24px);
 }
